--- a/01_the_machine_learning_landscape.ipynb
+++ b/01_the_machine_learning_landscape.ipynb
@@ -36,17 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Python ≥3.5 is required\n",
     "import sys\n",
-    "assert sys.version_info >= (3, 5)"
+    "assert sys.version_info >= (3, 5)\n",
+    "## Just want to test the git integration ... I know it's a weird thing to test, but idk wtf I'm doing."
    ]
   },
   {
