--- a/Chapter2.ipynb
+++ b/Chapter2.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import tarfile\n",
-    "import urllib"
+    "import urllib\n",
+    "import numpy as np"
    ]
   },
   {
@@ -197,15 +198,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
@@ -270,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3-final"
+   "version": "3.6.8-final"
   }
  },
  "nbformat": 4,
